--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:chrome": "tsc && mkdir -p builds/chrome && cp src/manifest.chrome.json builds/chrome/manifest.json && cp builds/temp/background.js builds/chrome/",
-    "build:firefox": "tsc && mkdir -p builds/firefox && cp src/manifest.firefox.json builds/firefox/manifest.json && cp builds/temp/background.js builds/firefox/",
+    "build:chrome": "webpack --mode=production && mkdir -p builds/chrome && cp src/manifest.chrome.json builds/chrome/manifest.json && cp builds/temp/background.js builds/chrome/",
+    "build:firefox": "webpack --mode=production && mkdir -p builds/firefox && cp src/manifest.firefox.json builds/firefox/manifest.json && cp builds/temp/background.js builds/firefox/",
     "build": "npm run clean && npm run build:chrome && npm run build:firefox",
-    "clean": "rm -rf builds"
+    "clean": "rm -rf builds",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.283",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.3"
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   }
 }
