--- a/src/manifest.chrome.json
+++ b/src/manifest.chrome.json
@@ -15,6 +15,7 @@
     "*://*.reddit.ru/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   }
 }
