--- a/src/manifest.firefox.json
+++ b/src/manifest.firefox.json
@@ -17,5 +17,11 @@
   ],
   "background": {
     "scripts": ["background.js"]
+  },
+  "icons": {
+    "16": "subreddit-redirect.png",
+    "32": "subreddit-redirect.png",
+    "48": "subreddit-redirect.png",
+    "128": "subreddit-redirect.png"
   }
 }
