--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "icon": "subreddit-redirect.png"
 }
